# microlensing_photometry

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  TODO  pyproject.toml
.github/workflows/: main.yml  smoke-test.yml  testing-and-coverage.yml
_readthedocs/html/: .buildinfo  genindex.html  index.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js
benchmarks/: asv.conf.json  benchmarks.py
data_management/: data_download.py
data_management/configuration/: example_data_download.yaml
docs/: conf.py  index.rst
docs/notebooks/: gaia_synthetic_phot.ipynb  photometric_calibration.ipynb
docs/source/: conf.py  index.rst
image_reduction/IO/: compression_utils.py  ds9_utils.py  hdf5.py  lightcurve.py  lightcurve_by_position.py  parquet.py  tom_utils.py
image_reduction/astrometry/: crossmatching.py  wcs.py
image_reduction/configuration/: configure_aperture_pipeline.py  example_reduction_configuration.yaml  example_reduction_manager_configuration.yaml  example_tom_config.yaml
image_reduction/data_quality/: astrometry_qc.py
image_reduction/infrastructure/: aperture_pipeline.py  data_classes.py  logs.py  observations.py  reduction_manager.py
image_reduction/logistics/: GaiaCatalog.py  __init__.py  image_tools.py  vizier_tools.py
image_reduction/photometry/: aperture_photometry.py  dia_photometry.py  photometric_scale_factor.py
image_reduction/tools/: upload_lcs_to_tom.py
image_reduction/trials/: dia_phot_script.py  iterative_ws_refinement.py
microlensing_photometry/: __init__.py
microlensing_photometry/IO/: compression_utils.py  fits_table_parser.py  hdf5.py  lightcurve.py  tom_utils.py
microlensing_photometry/astrometry/: wcs.py
microlensing_photometry/configuration/: configure_aperture_pipeline.py  example_reduction_configuration.yaml
microlensing_photometry/data_quality/: astrometry_qc.py
microlensing_photometry/infrastructure/: aperture_pipeline.py  data_classes.py  logs.py  observations.py  reduction_manager.py
microlensing_photometry/logistics/: GaiaCatalog.py  __init__.py  image_tools.py  vizier_tools.py
microlensing_photometry/photometry/: __init__.py  aperture_photometry.py  calibrate_photometry.py  conversions.py  dia_photometry.py  photometric_scale_factor.py
microlensing_photometry/plots/: lightcurve.py
microlensing_photometry/starfinder/: starfinder.py
microlensing_photometry/tests/: test_astrometry.py  (+6 more)
scripts/: dia_phot_script.py
tests/: task_process.py  test_astrometry.py  test_data_classes.py  test_io.py  test_logistics.py  test_logs.py  test_photometric_scale_factor.py  test_photometry.py  test_reduction_manager.py  test_starfinder.py
trials/: dia_phot_script.py
(+326 files in other folders)
