[tool.poetry]
name = "microlensing_photometry"
version = "0.1.0"
description = ""
authors = ["Rachel Street <rstreet@lco.global>", "Etienne Bachelet <etibachelet@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11, <3.12"
ipykernel = "6.30.0"
astropy = "7.1.0"
astroquery = "0.4.7"
fsspec = "2024.10.0"
photutils = "2.0.2"
scikit-image = "0.24.0"
pytest = "8.3.4"
matplotlib = "v3.10.1"
tqdm = "4.67.1"
ipython = "9.2.0"
h5py = "3.13.0"
jplephem = "2.22"
jupyter = "1.1.1"

[tool.poetry.scripts]
dia_phot_script = "trials.dia_phot_script:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "microlensing_photometry/*/*py" },
]